[AEMIP-174] - Remote assets - corrected URI bug, implemented configurable session saving/refreshing.